# ibmiotf-cpp

./: CMakeLists.txt  README.md  setup.sh
docs/: cpp_cli_for_devices.rst  cpp_cli_for_gateway.rst  cpp_cli_for_manageddevice.rst
lib/: CMakeLists.txt
samples/: CMakeLists.txt  device.cfg  gateway.cfg  log4cpp.properties  quickstart.cfg  sampleDevice.cpp  sampleGateway.cpp  sampleManagedDevice.cpp  sampleManagedGateway.cpp  sampleQuickstart.cpp  sslDeviceSample.cpp  sslGatewaySample.cpp
src/: CMakeLists.txt  Command.h  CommandCallback.h  IOTP_Client.cpp  IOTP_Client.h  IOTP_Device.cpp  IOTP_Device.h  IOTP_DeviceActionHandler.cpp  IOTP_DeviceActionHandler.h  IOTP_DeviceAttributeHandler.cpp  IOTP_DeviceAttributeHandler.h  IOTP_DeviceClient.cpp  IOTP_DeviceClient.h  IOTP_DeviceFirmwareHandler.cpp  IOTP_DeviceFirmwareHandler.h  IOTP_DeviceResponseMessage.h  IOTP_GatewayClient.cpp  IOTP_GatewayClient.h  IOTP_MessageHandler.h  IOTP_ReplyMessage.h  IOTP_ResponseHandler.cpp  IOTP_ResponseHandler.h  IOTP_TopicDefinitions.h  Properties.h  log4cpp.properties
test/: CMakeLists.txt  device.cfg  device_443.cfg  gateway.cfg  gateway_443.cfg  test.cfg  test_deviceclient.cpp  test_gatewayclient.cpp
